# KdiagonalSolver

./: .gitignore  ReadMe.md  doc.tex
include/: KdiagonalSolver.hpp  PentadiagonalSolver.hpp
src/: KdiagonalSolver.cpp  PentadiagonalSolver.cpp
test/: CMakeLists.txt  k_test.cpp  penta_test.cpp
